# ogl-game-engine

./: .gitignore  CMakeLists.txt  Color.h  DrawableObject.cpp  DrawableObject.h  GLUtilities.cpp  GLUtilities.h  LineObject.cpp  LineObject.h  Main.cpp  ModelInfo.cpp  ShaderUtils.cpp  Shape.cpp  Shape.h  Square.cpp  Square.h  SquareEntity.h  TextureUtils.cpp  TextureUtils.h  Triple.cpp  Triple.h  cube.cpp  cube.h  gl_utilities.cpp  gl_utilities.h  main.cpp  old_code
engine/: BasicModel.h  Cube.cpp  Cube.h  DrawHandle.cpp  DrawHandle.h  GLUtilities.cpp  Graphics.cpp  Graphics.h  Model.cpp  Model.h  ModelBuffer.cpp  ModelBuffer.h  ShaderHandle.cpp  ShaderHandle.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Window.cpp  Window.h  cube.cpp  cube.h  model.cpp  model.h
lib/: glm_static.lib  soil2-debug.lib
res/: square_model.txt  square_tex_coords.txt  triangle_model.txt
src/: Buffers.cpp  Buffers.h  Canvas.cpp  Canvas.h  Color.cpp  Color.h  EngineConstants.h  Entity.cpp  Entity.h  GLUtilities.cpp  GLUtilities.h  GridEntity.cpp  GridEntity.h  Main.cpp  ModelInfo.cpp  ResourceManager.cpp  ResourceManager.h  ShaderUtils.cpp  ShaderUtils.h  SquareEntity.cpp  SquareEntity.h  TriangleEntity.cpp  TriangleEntity.h  Triple.cpp  WorldProperties.cpp  WorldProperties.h
src/engine/: Canvas.cpp  Canvas.h  Color.h  Entity.cpp  Entity.h  OpenGL.cpp  OpenGL.h  TextureUtils.h  Triple.h  Types.h
src/engine/buffer/: Buffer.cpp  Buffer.h
src/engine/directory/: Model.cpp  Model.h
src/engine/model/: Model.cpp  Model.h
src/engine/texture/: Texture.cpp  Texture.h
src/model/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
